--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,10 @@
     "update-deps": "node ./src/config/update-deps.mjs"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.19",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@types/jest": "29.0.3",
@@ -34,10 +38,12 @@
     "husky": "8.0.1",
     "jest": "29.1.1",
     "jest-runner-eslint": "1.1.0",
+    "node-sass": "^9.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "5.3.4",
     "react-test-renderer": "18.2.0",
+    "sass": "^1.77.4",
     "ts-jest": "29.0.2",
     "ts-node": "10.9.1",
     "typescript": "4.8.4",
@@ -45,5 +51,10 @@
     "vite-plugin-linter": "1.2.0",
     "vite-plugin-svgr": "2.2.1",
     "vite-tsconfig-paths": "3.5.1"
+  },
+  "react-dotenv": {
+    "whitelist": [
+      "API_URL"
+    ]
   }
 }
