--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
 VITE_OAUTH_DOMAIN=dev-6ii8fg6kbgkopebo.jp.auth0.com
 VITE_OAUTH_CLIENT_ID=ovcaGRShQPvD3p71NKd37i41EpKJRkPp
+VITE_API_URL=http://localhost:8080
