--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.19",
+    "@reduxjs/toolkit": "^2.2.5",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@types/jest": "29.0.3",
@@ -41,6 +42,7 @@
     "node-sass": "^9.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "5.3.4",
     "react-test-renderer": "18.2.0",
     "sass": "^1.77.4",
